# orbit-screensaver

./: CMakeLists.txt  README.md  installer.nsi  main.cpp  stub_scr.cpp  updater.cpp
.github/workflows/: build.yml  fuck.yml
